20160602 CHANGELOG.txt created.